fix(timeline content): enlarge to avoid truncating the date

--- a/css/includes/components/itilobject/_timeline.scss
+++ b/css/includes/components/itilobject/_timeline.scss
@@ -99,7 +99,7 @@
     .timeline-content {
         position: relative;
         border-top-left-radius: 0;
-        max-width: 700px;
+        max-width: 820px;
         min-width: 100%;
         word-break: break-word;
 
